// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/sidebar/SidebarSettingsMenu imports menu open should match snapshot 1`] = `
<div>
  <div
    class="SidebarSettingsMenu"
  >
    <div
      aria-label="menuwrapper"
      class="MenuWrapper override menuOpened"
      role="button"
    >
      <div
        class="menu-entry"
      >
        Settings
      </div>
      <div
        class="Menu noselect top "
      >
        <div
          class="menu-contents"
        >
          <div
            class="menu-options"
          >
            <div>
              <div
                class="MenuOption SubMenuOption menu-option menu-option-active"
                id="import"
              >
                <div
                  class="noicon"
                />
                <div
                  class="menu-name"
                >
                  Import
                </div>
                <i
                  class="CompassIcon icon-chevron-right"
                />
                <div
                  class="SubMenu Menu noselect top"
                >
                  <div
                    class="menu-contents"
                  >
                    <div
                      class="menu-options"
                    >
                      <div
                        aria-label="Import archive"
                        class="MenuOption TextOption menu-option"
                        role="button"
                      >
                        <div
                          class="d-flex"
                        >
                          <div
                            class="noicon"
                          />
                        </div>
                        <div
                          class="menu-option__content"
                        >
                          <div
                            class="menu-name"
                          >
                            Import archive
                          </div>
                        </div>
                        <div
                          class="noicon"
                        />
                      </div>
                      <div
                        aria-label="Trello"
                        class="MenuOption TextOption menu-option"
                        role="button"
                      >
                        <div
                          class="d-flex"
                        >
                          <div
                            class="noicon"
                          />
                        </div>
                        <div
                          class="menu-option__content"
                        >
                          <div
                            class="menu-name"
                          >
                            Trello
                          </div>
                        </div>
                        <div
                          class="noicon"
                        />
                      </div>
                      <div
                        aria-label="Asana"
                        class="MenuOption TextOption menu-option"
                        role="button"
                      >
                        <div
                          class="d-flex"
                        >
                          <div
                            class="noicon"
                          />
                        </div>
                        <div
                          class="menu-option__content"
                        >
                          <div
                            class="menu-name"
                          >
                            Asana
                          </div>
                        </div>
                        <div
                          class="noicon"
                        />
                      </div>
                      <div
                        aria-label="Notion"
                        class="MenuOption TextOption menu-option"
                        role="button"
                      >
                        <div
                          class="d-flex"
                        >
                          <div
                            class="noicon"
                          />
                        </div>
                        <div
                          class="menu-option__content"
                        >
                          <div
                            class="menu-name"
                          >
                            Notion
                          </div>
                        </div>
                        <div
                          class="noicon"
                        />
                      </div>
                      <div
                        aria-label="Jira"
                        class="MenuOption TextOption menu-option"
                        role="button"
                      >
                        <div
                          class="d-flex"
                        >
                          <div
                            class="noicon"
                          />
                        </div>
                        <div
                          class="menu-option__content"
                        >
                          <div
                            class="menu-name"
                          >
                            Jira
                          </div>
                        </div>
                        <div
                          class="noicon"
                        />
                      </div>
                      <div
                        aria-label="Todoist"
                        class="MenuOption TextOption menu-option"
                        role="button"
                      >
                        <div
                          class="d-flex"
                        >
                          <div
                            class="noicon"
                          />
                        </div>
                        <div
                          class="menu-option__content"
                        >
                          <div
                            class="menu-name"
                          >
                            Todoist
                          </div>
                        </div>
                        <div
                          class="noicon"
                        />
                      </div>
                    </div>
                    <div
                      class="menu-spacer hideOnWidescreen"
                    />
                    <div
                      class="menu-options hideOnWidescreen"
                    >
                      <div
                        aria-label="Cancel"
                        class="MenuOption TextOption menu-option menu-cancel"
                        role="button"
                      >
                        <div
                          class="d-flex"
                        >
                          <div
                            class="noicon"
                          />
                        </div>
                        <div
                          class="menu-option__content"
                        >
                          <div
                            class="menu-name"
                          >
                            Cancel
                          </div>
                        </div>
                        <div
                          class="noicon"
                        />
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div>
              <div
                aria-label="Export archive"
                class="MenuOption TextOption menu-option"
                role="button"
              >
                <div
                  class="d-flex"
                >
                  <div
                    class="noicon"
                  />
                </div>
                <div
                  class="menu-option__content"
                >
                  <div
                    class="menu-name"
                  >
                    Export archive
                  </div>
                </div>
                <div
                  class="noicon"
                />
              </div>
            </div>
            <div>
              <div
                class="MenuOption SubMenuOption menu-option"
                id="theme"
              >
                <div
                  class="noicon"
                />
                <div
                  class="menu-name"
                >
                  Set theme
                </div>
                <i
                  class="CompassIcon icon-chevron-right"
                />
              </div>
            </div>
            <div>
              <div
                aria-label="Random icons"
                class="MenuOption SwitchOption menu-option"
                role="button"
              >
                <div
                  class="noicon"
                />
                <div
                  class="menu-name"
                >
                  Random icons
                </div>
                <div
                  class="Switch override-main size--small on"
                >
                  <div
                    class="octo-switch-inner"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            class="menu-spacer hideOnWidescreen"
          />
          <div
            class="menu-options hideOnWidescreen"
          >
            <div
              aria-label="Cancel"
              class="MenuOption TextOption menu-option menu-cancel"
              role="button"
            >
              <div
                class="d-flex"
              >
                <div
                  class="noicon"
                />
              </div>
              <div
                class="menu-option__content"
              >
                <div
                  class="menu-name"
                >
                  Cancel
                </div>
              </div>
              <div
                class="noicon"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/sidebar/SidebarSettingsMenu languages menu open should match snapshot 1`] = `
<div>
  <div
    class="SidebarSettingsMenu"
  >
    <div
      aria-label="menuwrapper"
      class="MenuWrapper override menuOpened"
      role="button"
    >
      <div
        class="menu-entry"
      >
        Settings
      </div>
      <div
        class="Menu noselect top "
      >
        <div
          class="menu-contents"
        >
          <div
            class="menu-options"
          >
            <div>
              <div
                class="MenuOption SubMenuOption menu-option"
                id="import"
              >
                <div
                  class="noicon"
                />
                <div
                  class="menu-name"
                >
                  Import
                </div>
                <i
                  class="CompassIcon icon-chevron-right"
                />
              </div>
            </div>
            <div>
              <div
                aria-label="Export archive"
                class="MenuOption TextOption menu-option"
                role="button"
              >
                <div
                  class="d-flex"
                >
                  <div
                    class="noicon"
                  />
                </div>
                <div
                  class="menu-option__content"
                >
                  <div
                    class="menu-name"
                  >
                    Export archive
                  </div>
                </div>
                <div
                  class="noicon"
                />
              </div>
            </div>
            <div>
              <div
                class="MenuOption SubMenuOption menu-option"
                id="theme"
              >
                <div
                  class="noicon"
                />
                <div
                  class="menu-name"
                >
                  Set theme
                </div>
                <i
                  class="CompassIcon icon-chevron-right"
                />
              </div>
            </div>
            <div>
              <div
                aria-label="Random icons"
                class="MenuOption SwitchOption menu-option"
                role="button"
              >
                <div
                  class="noicon"
                />
                <div
                  class="menu-name"
                >
                  Random icons
                </div>
                <div
                  class="Switch override-main size--small on"
                >
                  <div
                    class="octo-switch-inner"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            class="menu-spacer hideOnWidescreen"
          />
          <div
            class="menu-options hideOnWidescreen"
          >
            <div
              aria-label="Cancel"
              class="MenuOption TextOption menu-option menu-cancel"
              role="button"
            >
              <div
                class="d-flex"
              >
                <div
                  class="noicon"
                />
              </div>
              <div
                class="menu-option__content"
              >
                <div
                  class="menu-name"
                >
                  Cancel
                </div>
              </div>
              <div
                class="noicon"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/sidebar/SidebarSettingsMenu settings menu closed should match snapshot 1`] = `
<div>
  <div
    class="SidebarSettingsMenu"
  >
    <div
      aria-label="menuwrapper"
      class="MenuWrapper"
      role="button"
    >
      <div
        class="menu-entry"
      >
        Settings
      </div>
    </div>
  </div>
</div>
`;

exports[`components/sidebar/SidebarSettingsMenu settings menu open should match snapshot 1`] = `
<div>
  <div
    class="SidebarSettingsMenu"
  >
    <div
      aria-label="menuwrapper"
      class="MenuWrapper override menuOpened"
      role="button"
    >
      <div
        class="menu-entry"
      >
        Settings
      </div>
      <div
        class="Menu noselect top "
      >
        <div
          class="menu-contents"
        >
          <div
            class="menu-options"
          >
            <div>
              <div
                class="MenuOption SubMenuOption menu-option"
                id="import"
              >
                <div
                  class="noicon"
                />
                <div
                  class="menu-name"
                >
                  Import
                </div>
                <i
                  class="CompassIcon icon-chevron-right"
                />
              </div>
            </div>
            <div>
              <div
                aria-label="Export archive"
                class="MenuOption TextOption menu-option"
                role="button"
              >
                <div
                  class="d-flex"
                >
                  <div
                    class="noicon"
                  />
                </div>
                <div
                  class="menu-option__content"
                >
                  <div
                    class="menu-name"
                  >
                    Export archive
                  </div>
                </div>
                <div
                  class="noicon"
                />
              </div>
            </div>
            <div>
              <div
                class="MenuOption SubMenuOption menu-option"
                id="theme"
              >
                <div
                  class="noicon"
                />
                <div
                  class="menu-name"
                >
                  Set theme
                </div>
                <i
                  class="CompassIcon icon-chevron-right"
                />
              </div>
            </div>
            <div>
              <div
                aria-label="Random icons"
                class="MenuOption SwitchOption menu-option"
                role="button"
              >
                <div
                  class="noicon"
                />
                <div
                  class="menu-name"
                >
                  Random icons
                </div>
                <div
                  class="Switch override-main size--small on"
                >
                  <div
                    class="octo-switch-inner"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            class="menu-spacer hideOnWidescreen"
          />
          <div
            class="menu-options hideOnWidescreen"
          >
            <div
              aria-label="Cancel"
              class="MenuOption TextOption menu-option menu-cancel"
              role="button"
            >
              <div
                class="d-flex"
              >
                <div
                  class="noicon"
                />
              </div>
              <div
                class="menu-option__content"
              >
                <div
                  class="menu-name"
                >
                  Cancel
                </div>
              </div>
              <div
                class="noicon"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/sidebar/SidebarSettingsMenu theme menu open should match snapshot 1`] = `
<div>
  <div
    class="SidebarSettingsMenu"
  >
    <div
      aria-label="menuwrapper"
      class="MenuWrapper override menuOpened"
      role="button"
    >
      <div
        class="menu-entry"
      >
        Settings
      </div>
      <div
        class="Menu noselect top "
      >
        <div
          class="menu-contents"
        >
          <div
            class="menu-options"
          >
            <div>
              <div
                class="MenuOption SubMenuOption menu-option"
                id="import"
              >
                <div
                  class="noicon"
                />
                <div
                  class="menu-name"
                >
                  Import
                </div>
                <i
                  class="CompassIcon icon-chevron-right"
                />
              </div>
            </div>
            <div>
              <div
                aria-label="Export archive"
                class="MenuOption TextOption menu-option"
                role="button"
              >
                <div
                  class="d-flex"
                >
                  <div
                    class="noicon"
                  />
                </div>
                <div
                  class="menu-option__content"
                >
                  <div
                    class="menu-name"
                  >
                    Export archive
                  </div>
                </div>
                <div
                  class="noicon"
                />
              </div>
            </div>
            <div>
              <div
                class="MenuOption SubMenuOption menu-option menu-option-active"
                id="theme"
              >
                <div
                  class="noicon"
                />
                <div
                  class="menu-name"
                >
                  Set theme
                </div>
                <i
                  class="CompassIcon icon-chevron-right"
                />
                <div
                  class="SubMenu Menu noselect top"
                >
                  <div
                    class="menu-contents"
                  >
                    <div
                      class="menu-options"
                    >
                      <div
                        aria-label="Default theme"
                        class="MenuOption TextOption menu-option"
                        role="button"
                      >
                        <div
                          class="d-flex"
                        >
                          <div
                            class="noicon"
                          />
                        </div>
                        <div
                          class="menu-option__content"
                        >
                          <div
                            class="menu-name"
                          >
                            Default theme
                          </div>
                        </div>
                        <svg
                          class="CheckIcon Icon"
                          viewBox="0 0 100 100"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <polyline
                            points="20,60 40,80 80,40"
                          />
                        </svg>
                      </div>
                      <div
                        aria-label="Dark theme"
                        class="MenuOption TextOption menu-option"
                        role="button"
                      >
                        <div
                          class="d-flex"
                        >
                          <div
                            class="noicon"
                          />
                        </div>
                        <div
                          class="menu-option__content"
                        >
                          <div
                            class="menu-name"
                          >
                            Dark theme
                          </div>
                        </div>
                        <div
                          class="noicon"
                        />
                      </div>
                      <div
                        aria-label="Light theme"
                        class="MenuOption TextOption menu-option"
                        role="button"
                      >
                        <div
                          class="d-flex"
                        >
                          <div
                            class="noicon"
                          />
                        </div>
                        <div
                          class="menu-option__content"
                        >
                          <div
                            class="menu-name"
                          >
                            Light theme
                          </div>
                        </div>
                        <div
                          class="noicon"
                        />
                      </div>
                      <div
                        aria-label="System theme"
                        class="MenuOption TextOption menu-option"
                        role="button"
                      >
                        <div
                          class="d-flex"
                        >
                          <div
                            class="noicon"
                          />
                        </div>
                        <div
                          class="menu-option__content"
                        >
                          <div
                            class="menu-name"
                          >
                            System theme
                          </div>
                        </div>
                        <div
                          class="noicon"
                        />
                      </div>
                    </div>
                    <div
                      class="menu-spacer hideOnWidescreen"
                    />
                    <div
                      class="menu-options hideOnWidescreen"
                    >
                      <div
                        aria-label="Cancel"
                        class="MenuOption TextOption menu-option menu-cancel"
                        role="button"
                      >
                        <div
                          class="d-flex"
                        >
                          <div
                            class="noicon"
                          />
                        </div>
                        <div
                          class="menu-option__content"
                        >
                          <div
                            class="menu-name"
                          >
                            Cancel
                          </div>
                        </div>
                        <div
                          class="noicon"
                        />
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div>
              <div
                aria-label="Random icons"
                class="MenuOption SwitchOption menu-option"
                role="button"
              >
                <div
                  class="noicon"
                />
                <div
                  class="menu-name"
                >
                  Random icons
                </div>
                <div
                  class="Switch override-main size--small on"
                >
                  <div
                    class="octo-switch-inner"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            class="menu-spacer hideOnWidescreen"
          />
          <div
            class="menu-options hideOnWidescreen"
          >
            <div
              aria-label="Cancel"
              class="MenuOption TextOption menu-option menu-cancel"
              role="button"
            >
              <div
                class="d-flex"
              >
                <div
                  class="noicon"
                />
              </div>
              <div
                class="menu-option__content"
              >
                <div
                  class="menu-name"
                >
                  Cancel
                </div>
              </div>
              <div
                class="noicon"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
